# barnowl

./: .gitignore  Makefile.am  aim.c  buddylist.c  commands.c  createdb.pl  filterelement.c  functions.c  global.c  logging.c  mainwin.c  message.c  owl.c  owl.h  owl_perl.h  perlconfig.c  perlglue.xs  select.c  sepbar.c  tester.c  util.c  variable.c  varlist.h  varstubs.c  varstubs.h  view.c  zephyr.c
perl/lib/: BarnOwl.pm
perl/lib/BarnOwl/: Hooks.pm  MessageList.pm  Sepbar.pm  Timer.pm
perl/lib/BarnOwl/MessageList/: SQL.pm
perl/lib/BarnOwl/Style/: Default.pm  OneLine.pm
perl/lib/BarnOwl/View/: Iterator.pm
perl/modules/Jabber/lib/BarnOwl/Module/: Jabber.pm
